# deepISA_filter

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: ag_config_template.yaml
data/: model_blympho.pt  motif_locs.csv  regions_pos_with_count.csv
notebooks/: ag_biosample_reference.csv  deepISA_tutorial.ipynb  motif_filter_tutorial.ipynb
src/deepISA/: utils.py
src/deepISA/filters/: __init__.py
src/deepISA/filters/cli/: common_args.py  run_filter.py
src/deepISA/filters/core/: __init__.py  attribution.py  scoring.py  threshold.py  window.py
src/deepISA/filters/pipeline/: __init__.py  api.py  pipeline.py
src/deepISA/filters/utils/: __init__.py  fasta.py  io.py  onehot.py
src/deepISA/modeling/: __init__.py  alpha_genome_adapter.py
src/deepISA/motif_filter/pipeline/: api.py
src/deepISA/utils/: __init__.py  deepisa_guard.py  fasta.py  genome_setup.py
tests/: test_adapter.py  test_attr_filter_pipeline.py
tutorials/: motif_filter_tutorial.ipynb
