[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepISA"
version = "0.1.0"
description = "A unified Python framework for mapping transcription factor cooperativity using deep learning and in silico ablation."
authors = [
    {name = "Xuening He", email = "xuening.he@bio.ku.com"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
]

# Core dependencies based on your module requirements
# NOTE: For reproducibility, use requirements.lock.txt for exact versions
dependencies = [
    # Strict versions (from requirements.lock.txt)
    "numpy==1.26.4",
    "pandas==2.3.3",
    "torch==2.8.0",
    "captum==0.8.0",           # Required for filters module
    "scipy==1.13.1",
    "bioframe==0.8.0",
    "pysam==0.23.3",           # NEW from filter
    "pyBigWig==0.3.25",
    "matplotlib==3.9.4",
    "seaborn==0.13.2",
    "pyyaml==6.0.3",           # NEW from filter
    "tqdm==4.67.3",
    "loguru==0.7.3",
    "scikit-learn==1.5.2",
    "statsmodels==0.14.4",     # NEW from filter
    "adjustText==0.8",         # NEW from filter
    # From upstream (flexible versions)
    "biopython>=1.80",
    "requests",
    # "streamlit>=1.20.0",     # Optional - kept as flexible
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",                # For the Phase 1/2 validation logic
    "black",                      # Code formatting
    "isort",                      # Import sorting
]

[tool.setuptools.packages.find]
where = ["src"]


[project.scripts]
deepisa-cli = "deepisa.main:main"